# Ledeu-Programm

./: CMakeLists.txt  main.cpp  windows-ci.yml.txt
.github/workflows/: ci-build.yml  windows-build.yml  windows-ci.yml
